--- a/CswAPIClient/History.txt
+++ b/CswAPIClient/History.txt
@@ -94,7 +94,7 @@
 2.6.5: Remove History.txt
 2.6.4: Fix more problems with invalid xml
 2.6.3: Fix problem with invalid datetime element in xml response from GeoNetwork.
-2.6.2: Improve testability with an interface on top of the GeoNorge class.
+2.6.2: Improve testability with an interface on top of the CswAPIClient class.
 2.6.1: Change log4net dependency to use .NET Framework 4.0 - This library should be fully compatible with .NET Framework 4.0 now.
 2.6.0: Change target framework to .NET Framework 4.0
 2.5.7: Fix bug causing bounding box for series and software not being read and saved correct.
@@ -137,7 +137,7 @@
 2.2.2: Fix NullReference when running metadata update transaction.
 2.2.1: Mappings for OperatesOn in ServiceIdentification.
 2.2.0: Add static factory methods to SimpleMetadata for creating new Dataset or Service Metadata from scratch. 
-2.1.1: Add missing class. Updated default endpoint to use SSL for all communcation with www.geonorge.no
+2.1.1: Add missing class. Updated default endpoint to use SSL for all communcation with www.CswAPIClient.no
 2.1.0: New signature for CSW transaction methods: insert, update and delete. Identifiers are now properly returned in the response object.
 2.0.8: Mappings for keywords.
 2.0.7: Add keyword constants for thesaurus and type.
